# dronechase

./: .gitignore  pyproject.toml  readme.md  requirements.txt
PyFlyt/core/: aviary_loyalwingmen.py
apps/level1/: interactive.py  learn.py  load.py  test_keyboardlistener.py
apps/level2/: analyse-non-cuda.py  analyse.py  baysian_optimizer_app.py  baysian_optimizer_app_remaking.py  baysian_optimizer_app_v2.py  baysian_optimizer_app_v2_ciclo_2.py  baysian_optimizer_app_v2_modified.py  baysian_optimizer_app_v2_single_modified.py  baysian_optimizer_app_v3.py  baysian_v_old.py  baysian_v_old_modified.py  baysian_v_old_modified_single.py  baysian_v_old_modified_single_v2.py  baysian_v_old_modified_v2.py  baysian_v_old_modified_v3.py  interactive.py  learn.py  load.py  load_v3.py  result.prof  result_with_lidar.prof
apps/level3/: analyse-non-cuda.py  analyse.py  baysian_optimizer_app.py  baysian_optimizer_app_v2.py  baysian_optimizer_app_v2_ciclo_01.py  baysian_optimizer_app_v2_ciclo_01_mac.py  baysian_optimizer_app_v2_ciclo_01_single.py  baysian_optimizer_app_v2_ciclo_02.py  interactive-mac.py  interactive.py  learn.py  leia-me  load.py  result_with_lidar.prof
apps/level4/: analyse-non-cuda.py  baysian_optimizer_app.py  baysian_optimizer_app_exp02_ciclo_01.py  baysian_optimizer_app_exp02_v2_ciclo_01.py  baysian_optimizer_app_exp02_v2_ciclo_01_mac.py  baysian_optimizer_app_exp02_v2_ciclo_01_office.py  baysian_optimizer_app_exp02_v2_full_ciclo_02.py  evaluation_app.py  load.py  (+40 more)
legacy/: environment_dronechase.yml  install_notes.md  requirements.txt
loyalwingmen/: tree.txt
(+1543 files in other folders)
