[tool.poetry]
name = "dronechase"
version = "0.1.0"
description = "Deep Reinforcement applyed to loyal wingmen drones"
authors = ["DaviGuanabara <davi_guanabara@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyflyt = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
